--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "repository": {
     "url": "https://github.com/AChangXD/dark-colored.git"
   },
+  "license": "MIT",
   "description": "",
   "version": "0.0.1",
   "engines": {
